# quick-ml-classifier

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
deployment/: Dockerfile  requirements-serve.txt  sagemaker_deploy.py  serve.py
features/: spark_pipeline.py
ingestion/: ingest.py
notebooks/: quick_ml_train.ipynb
observability/: docker-compose-monitoring.yml  otel-collector-config.yaml  otel_config.py  prometheus.yml
observability/dashboards/: fraud_detection.json
pipeline/: Dockerfile.consumer  Dockerfile.producer  kafka_consumer.py  kafka_producer.py
registry/: model_registry.py  schema_registry.py
schemas/: compile_proto.sh  transaction.proto
services/data_api/: Dockerfile  main.py  requirements.txt
training/: train.py
