[project]
name = "quick-ml-classifier"
version = "0.1.0"
description = "End-to-end fraud detection ML system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Data API
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "faker>=24.0.0",
    # Protobuf / Ingestion
    "protobuf>=4.25.0",
    "grpcio>=1.62.0",
    "pyarrow>=15.0.0",
    "requests>=2.31.0",
    # Kafka
    "confluent-kafka>=2.3.0",
    # Iceberg
    "pyiceberg[s3]>=0.6.0",
    # PySpark (Iceberg runtime installed separately via --packages)
    "pyspark>=3.5.0",
    # ML
    "scikit-learn>=1.4.0",
    "lightgbm>=4.3.0",
    "optuna>=3.6.0",
    "joblib>=1.3.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    # MLflow
    "mlflow>=2.12.0",
    "boto3>=1.34.0",
    # Observability
    "prometheus-client>=0.20.0",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "opentelemetry-sdk>=1.23.0",
    "opentelemetry-instrumentation-fastapi>=0.44b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
